deploy-rh-sso/14-statefulset-rh-sso.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: rh-sso
  labels:
    app: rh-sso
    app.kubernetes.io/part-of: rh-sso
    component: rh-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rh-sso
      component: rh-sso
  template:
    metadata:
      name: rh-sso
      creationTimestamp: null
      labels:
        app: rh-sso
        component: rh-sso
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rh-sso
                topologyKey: topology.kubernetes.io/zone
            - weight: 90
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rh-sso
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - terminationMessagePath: /dev/termination-log
          name: rh-sso
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9990
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: rh-sso-x509-https-secret
              mountPath: /etc/x509/https
            - name: rh-sso-extensions
              mountPath: /opt/eap/standalone/deployments
            - name: rh-sso-probes
              mountPath: /probes
          terminationMessagePolicy: File
          image: 'registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4'
      volumes:
        - name: rh-sso-x509-https-secret
          secret:
            secretName: rh-sso-x509-https-secret
            defaultMode: 420
            optional: true
        - name: rh-sso-extensions
          emptyDir: {}
        - name: rh-sso-probes
          configMap:
            name: rh-sso-probes
            defaultMode: 365
      dnsPolicy: ClusterFirst
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
