deploy-rh-sso/03-service-rh-sso-discovery.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rh-sso-discovery
  namespace: rh-sso-demo
  labels:
    app: rh-sso
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rh-sso
    component: rh-sso
  type: ClusterIP
