deploy-rh-sso/04-service-rh-sso-monitoring.yaml
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    description: The monitoring service for Prometheus
  name: rh-sso-monitoring
  labels:
    app: rh-sso
    app.kubernetes.io/part-of: rh-sso
    component: service
spec:
  ports:
    - name: rh-sso-monitoring
      protocol: TCP
      port: 9990
      targetPort: 9990
  selector:
    app: rh-sso
    component: rh-sso
  type: ClusterIP
