deploy-rh-sso/06-route-rh-sso.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rh-sso
  labels:
    app: rh-sso
    app.kubernetes.io/part-of: rh-sso
    component: route
spec:
  to:
    kind: Service
    name: rh-sso
    weight: 100
  port:
    targetPort: rh-sso
  tls:
    termination: reencrypt
  wildcardPolicy: None
