deploy-rh-sso/08-route-rh-sso-myrealm-metrics-rewrite.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rh-sso-myrealm-metrics-rewrite
  labels:
    app: rh-sso
    app.kubernetes.io/part-of: rh-sso
    component: route
spec:
  path: /auth/realms/myrealm/metrics
  to:
    kind: Service
    name: rh-sso
    weight: 100
  port:
    targetPort: rh-sso
  tls:
    termination: reencrypt
  wildcardPolicy: None
